folder structure completed

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,17 +5,17 @@
 
     <group android:checkableBehavior="single" >
         <item
-            android:id="@+id/nav_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_orders"
+            android:title="@string/menu_orders" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_profile"
+            android:title="@string/menu_profile" />
         <item
-            android:id="@+id/nav_home"
-            android:title="@string/menu_home"/>
+            android:id="@+id/nav_price"
+            android:title="@string/menu_price"/>
         <item
-            android:id="@+id/nav_buyer"
-            android:title="@string/menu_buyer" />
+            android:id="@+id/nav_agents"
+            android:title="@string/menu_agents" />
         <item
             android:id="@+id/nav_calendar"
             android:title="@string/menu_Calendar" />
