--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.SignupActivity">
+    tools:context=".activities.SignUpActivity">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -102,6 +102,7 @@
              android:layout_margin="10dp"
 
              app:endIconMode="clear_text"
+             app:errorEnabled="true"
              android:id="@+id/til_last_name">
 
              <com.google.android.material.textfield.TextInputEditText
@@ -121,6 +122,7 @@
              android:layout_margin="10dp"
 
              app:endIconMode="clear_text"
+             app:errorEnabled="true"
              android:id="@+id/til_email">
 
              <com.google.android.material.textfield.TextInputEditText
@@ -140,7 +142,7 @@
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:hint="@string/phone"
              android:layout_margin="10dp"
-
+             app:errorEnabled="true"
              app:endIconMode="clear_text"
              android:id="@+id/til_phone">
 
@@ -209,6 +211,7 @@
              android:layout_margin="10dp"
 
              app:endIconMode="clear_text"
+             app:errorEnabled="true"
              android:id="@+id/til_user_name">
 
              <com.google.android.material.textfield.TextInputEditText
@@ -232,6 +235,7 @@
 
              android:hint="@string/password"
 
+             app:errorEnabled="true"
              app:passwordToggleEnabled="true"
              android:layout_margin="10dp"
 
