--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ConfirmOrderActivity">
+    tools:context=".activities.ConfirmOrderActivity"
+    android:id="@+id/root">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,8 +33,8 @@
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
 
-            app:title="Add Price"
-            app:subtitle="Add price to product"
+            app:title="Request Order"
+            app:subtitle="Add Quantity"
 
 
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
