change the ui and logic

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -120,7 +120,7 @@ android:layout_margin="10dp"
                     android:id="@+id/tiet_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:inputType="textPassword"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
