--- a/app/src/main/res/layout/metal_dialog_layout.xml
+++ b/app/src/main/res/layout/metal_dialog_layout.xml
@@ -51,7 +51,7 @@
         android:id="@+id/bt_apply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/apply"
+        android:text="@string/apply1"
 
         android:layout_margin="10dp"
         android:layout_alignParentStart="true"
